<resources>
    <string name="app_name">MySportApplication</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connectez_vous">Connectez-vous :</string>
    <string name="connexion">Connexion</string>
    <string name="vous_n_avez_pas_de_compte">Pas encore de compte ?</string>
    <string name="hint">hint</string>
    <string name="cr_er_un_nouveau_compte">Créer un nouveau compte</string>
    <string name="mysportapp">MySportApp</string>
    <string name="combien_d_exercices_voulez_vous_cr_er">Combien d\'exercices voulez-vous créer ?</string>
    <string name="pauses_courtes_entre_chaque_exercices">Pauses courtes entre chaque exercices</string>
    <string name="pauses_longues_la_fin_de_la_s_rie">Pauses longues à la fin de la série</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="validation_mot_de_passe">Validation mot de passe :</string>
    <string name="age">Age :</string>
    <string name="adresse_mail">Adresse mail :</string>
    <string name="enregistrez_vos_informations">Enregistrez vos informations :</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="valider">Valider</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>